# 2012-4-10

- Make sure that the patient picker table view allows selection while in reorder mode
- Save which patient is selected and restore it on launch

# 2012-4-9

- Changed BMI normal range for adults to 18-25
- Added reordering of patients

# 2012-4-8

- Add alert offering to setup an email account if none is present when the Feedback button is tapped
- Change patient toggle to be cyclical
- Change patient image interaction on the summary view to be tap instead of swipe (left vs right half of the image will do previous vs next respectively)
- Sort conditions by the correct date field
- Update timeline

# 2012-4-7

- Converted feedback form to email instead of testflight.
- Emails go to hreader@googlegroups.com

# 2012-4-4

- make conditions and events tappable
- add full screen views for each patient for conditions and events
- lock entire user interface to landscape
- add oxygen saturation applet
- add respiratory rate applet
- set default applets for nancy
- update provider images for henry

# 2012-4-4

- immunizations applet shows black when up to date and red otherwise
- adjusted column width of condition dates to allow for more of the condition name to be shown
- remove date label from events > medication refills
- use sentence capitalization from all labels (not including rasterized images)
- patients are now sorted by age, oldest on top in the people picker
- update image assets for providers and simulated applets for almost every patient

# 2012-4-4

- minor ui bug fixes and changes
- sparklines now show unique visible range per-line instead of for the whole graph

# 2012-4-03

- update henry smith user image
- show dots for every point on sparklines, white for in range red for out
- refactor summary view header to reflect new layout
- add new people picker icon

# 2012-4-02

- Fixed timeline issues
- Finished HRSparkLine lib
- Fixed bug in date formatter parsing in timeline

# 2012-4-30

- Started custom sparkline library
- Updated user images