@@ -1,0 +1,30 @@
+//
+//  HReaderConfig.xcconfig
+//  HReader
+//
+//  Created by Administrator on 5/11/12.
+//  Copyright (c) 2012 MITRE Corporation. All rights reserved.
+//
+
+VALID_ARCHS = armv7
+ARCHS = armv7
+SDKROOT = iphoneos
+
+GCC_VERSION = com.apple.compilers.llvm.clang.1_0
+
+GCC_C_LANGUAGE_STANDARD = c99
+
+GCC_WARN_64_TO_32_BIT_CONVERSION = YES
+GCC_WARN_INITIALIZER_NOT_FULLY_BRACKETED = YES
+GCC_WARN_ABOUT_RETURN_TYPE = YES
+GCC_WARN_MISSING_PARENTHESES = YES
+GCC_WARN_ABOUT_MISSING_FIELD_INITIALIZERS = YES
+GCC_WARN_ABOUT_MISSING_NEWLINE = YES
+GCC_WARN_SIGN_COMPARE = YES
+GCC_WARN_TYPECHECK_CALLS_TO_PRINTF = YES
+//GCC_WARN_UNDECLARED_SELECTOR = YES
+GCC_WARN_UNUSED_FUNCTION = YES
+GCC_WARN_UNUSED_LABEL = YES
+GCC_WARN_UNUSED_VALUE = YES
+GCC_WARN_UNUSED_VARIABLE = YES
+//GCC_TREAT_WARNINGS_AS_ERRORS = YES
